--- a/main.html
+++ b/main.html
@@ -3,14 +3,16 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <form id="form" onsubmit="minCostToFormRope(event)">
+      <input type="text" />
+	
+      <input type="submit" value="Submit"/>
+    </form>
+    <div id="result"></div>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
